--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Application port
 server.port=8888
+spring.h2.console.enabled=true
 
 #Database connection
 spring.datasource.url=jdbc:h2:mem:practice_db
