--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,33 @@
-#Application port
-server.port=8888
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:test0
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+
+
+spring.datasource.initialize=true
+spring.datasource.platform=h2
+spring.datasource.initialization-mode=EMBEDDED
+spring.datasource.schema=classpath*:schema.sql
+spring.datasource.data=classpath*:import.sql
+
+
+# Enabling H2 Console
 spring.h2.console.enabled=true
 
-#Database connection
-spring.datasource.url=jdbc:h2:mem:practice_db
-spring.datasource.username=sa
-spring.datasource.password=123456
-spring.datasource.driverClassName=org.h2.Driver
+# Custom H2 Console URL
+spring.h2.console.path=/h2-console
 
-spring.datasource.sql-script-encoding=UTF-8
-spring.datasource.initialization-mode=always
+# create database schema from SQL files
 
-#Hibernate configuration
-spring.jpa.hibernate.ddl-auto=
 
-#Tracing SQL-statements
-#spring.jpa.hibernate.show_sql=true
-#spring.jpa.hibernate.format_sql=true
-#spring.jpa.hibernate.use_sql_comments=true
-#
-#logging.level.org.hibernate=DEBUG
+#Turn Statistics on and log SQL stmts
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.generate_statistics=false
+#logging.level.org.hibernate.type=trace
+#logging.level.org.hibernate.stat=debug
+
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
